--- a/shopest_f.html
+++ b/shopest_f.html
@@ -304,6 +304,25 @@
           </div>
     </div><!--end card-columns-->
      </div><!--end container-->
+     <div class="container-fluid my-4" >
+        <div class="one">
+        <div class="row">
+          <div class="card  hovereffect col-6 h-100">
+            <img class="card-img img-responsive" src="pexels/pexels-photo-374815.jpeg"/ >
+             <div class="overlay">
+                <h2>WE ARE IN LONDON</h2>
+            </div>
+          </div>
+
+          <div class="card hovereffect col-6 h-100">
+            <img class="card-img img-responsive" src="pexels/pexels-photo-234315.jpeg" />
+             <div class="overlay">
+                <h2>WE ARE IN BERLIN</h2>
+            </div>
+          </div>
+        </div>
+    </div>
+</div>
      <footer class=" container-fluid border-top bg-dark text-white">
             <div class="row mx-auto">
                     <div class="col-md-4 text-center">
