--- a/index.html
+++ b/index.html
@@ -304,9 +304,17 @@
           </div>
     </div><!--end card-columns-->
      </div><!--end container-->
-     <div class="container-fluid my-4" >
+     <div class=" container-fluid my-4 subscribe">
+      <form class="pt-5">
+          <div class="form-group offset-2 col-8 offset-2">
+            <label for="exampleFormControlInput1">SUBSCRIBE TO OUR NEWSLETTER</label>
+            <input type="email" class="form-control my-4" id="exampleFormControlInput1" placeholder="name@address.com">
+            <button class="btn btn-warning">SUBSCRIBE </button>
+          </div>
+    </form>
+       </div>
+     <div class="container-fluid my-2" >
         <div class="one">
-            <p class="text-center py-4">OUR LOCATIONS</p>
         <div class="row">
           <div class="card  hovereffect col-6 h-100">
             <img class="card-img img-responsive" src="pexels/pexels-photo-374815.jpeg"/ >
@@ -324,42 +332,36 @@
         </div>
     </div>
 </div>
-     <footer class=" container-fluid border-top bg-dark text-white">
+     <footer class=" container-fluid border-top">
             <div class="row mx-auto">
-                    <div class="col-md-4 text-center">
+                    <div class="col-md-4">
                         <div class="info1">
-                            <h6 class="mt-4 ">CONTACT</h6>
-                            <p>FAQ</p>
-                            <p>RETAILERS</p>
-                            <p>CAREERS</p>
-                            <p>PRESS OFFICE</p>
+                            <h6>CONTACT</h6>
+                            <h6>RETAILERS</h6>
+                            <h6>CAREERS</h6>
+                            <h6>PRESS OFFICE</h6>
                         </div>
                     </div>
-                     <div class="col-md-4 text-center">
-                        <div class="info-2">
-                            <h6 class="mt-4">SUBSCRIBE</h6>
-                            <p>GET INSPIRED TO SHOP <br/>NEW NEIGHBOURHOODS</p>
-                            <form>
-                              <div class="form-group">
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                                <button class="btn btn-warning btn-sm mt-3">SUBSCRIBE</button>
-                              </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="col-md-4 text-center">
+                    <div class="col-md-4">
                         <div class="info3">
-                            <h6 class="mt-4">INFO</h6>
-                            <p class="social_media">
+                            <h6>INFO</h6>
+                            <h6>TERMS OF SERVICE</h6>
+                            <h6>PRIVACY POLICY</h6>
+                            <h6>FAQ</h6>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                      <div class="info4">
+                        <p class="social_media">
                                     <a href=#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                     <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                     <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                     <a href="#" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
                             </p>
-                            <p>TERMS OF SERVICE</p>
-                            <p>PRIVACY POLICY</p>
-                            <p>@COPYRIGHT</p>
-                        </div>
+                      <h6>WE ARE SUPPORTED BY:</h6>
+                      <img src="pexels/fashionlogo.png">
+                      <img src="pexels/TechStarslogo.png">
+                    </div>
                     </div>
             </div>
         </footer>
