--- a/index.html
+++ b/index.html
@@ -69,13 +69,11 @@
         </div>
     </div>
   <div class="card-columns two mt-5">
-          <div class="card hovereffect pt-4">
-            <a href="#" title="look inside">
+          <div class="card hovereffect ">
             <img class="card-img img-responsive" src="pexels/pexels-photo-704950.jpeg"/>
              <div class="overlay">
                 <div><i class="fa fa-diamond" aria-hidden="true"></i> </div> <div><i class="fa fa-star-o" aria-hidden="true"></i></div>
             </div>
-        </a>
           </div>
           <div class="card hovereffect">
             <img class="card-img img-responsive" src="pexels/pexels-photo-896293.jpeg"/>
@@ -304,6 +302,145 @@
           </div>
     </div><!--end card-columns-->
      </div><!--end container-->
+
+<div class="container">
+  <div class="row">
+    <div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel"  data-interval="1000">
+            <div class="MultiCarousel-inner">
+                <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+                <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+               <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+               <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+               <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+                <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+               <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+               <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+               <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+                <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+                <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+               <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+                <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+                <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+                <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+                <div class="item hovereffect">
+                    <div class="pad15 img-responsive">
+                        <div class="overlay p-4">
+                          <div> <i class="fa fa-diamond mt-4" aria-hidden="true"></i> </div>
+                            <div><i class="fa fa-star-o mt-4" aria-hidden="true"></i></div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-link leftLst"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
+            <button class="btn btn-link rightLst"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
+        </div>
+  </div>
+</div>
      <div class=" container-fluid my-4 subscribe">
       <form class="pt-5">
           <div class="form-group offset-2 col-8 offset-2">
@@ -352,7 +489,7 @@
                     </div>
                     <div class="col-md-4">
                       <div class="info4">
-                        <p class="social_media">
+                        <p class="social_media ">
                                     <a href=#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                     <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                     <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -365,6 +502,5 @@
                     </div>
             </div>
         </footer>
-
   </body>
   </html>
