--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
         </div>
         <ul class="nav justify-content-center">
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">TRENDING</a>
+            <a class="nav-link" href="#">TRENDING</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">SALES & EVENT</a>
+            <a class="nav-link" href="#">SALES & EVENT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">STORES</a>
+            <a class="nav-link" href="#">STORES</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">INSPIRATIONS</a>
+            <a class="nav-link" href="#">INSPIRATIONS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
           </li>
         </ul>
     </nav>
@@ -525,10 +525,10 @@
                     <div class="col-md-4">
                       <div class="info4">
                         <p class="social_media ">
-                                    <a href=#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                    <a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                                    <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                                    <a href="#" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+                                    <a href=#" target="_blank"><i class="fa fa-facebook border p-2" aria-hidden="true"></i></a>
+                                    <a href="#" target="_blank"><i class="fa fa-twitter border p-2" aria-hidden="true"></i></a>
+                                    <a href="#" target="_blank"><i class="fa fa-instagram border p-2" aria-hidden="true"></i></a>
+                                    <a href="#" target="_blank"><i class="fa fa-pinterest border p-2" aria-hidden="true"></i></a>
                             </p>
                       <h6>WE ARE SUPPORTED BY:</h6>
                       <img src="pexels/fashionlogo.png">
