--- a/index.html
+++ b/index.html
@@ -525,10 +525,10 @@
                     <div class="col-md-4">
                       <div class="info4">
                         <p class="social_media ">
-                                    <a href=#" target="_blank"><i class="fa fa-facebook border p-2" aria-hidden="true"></i></a>
-                                    <a href="#" target="_blank"><i class="fa fa-twitter border p-2" aria-hidden="true"></i></a>
-                                    <a href="#" target="_blank"><i class="fa fa-instagram border p-2" aria-hidden="true"></i></a>
-                                    <a href="#" target="_blank"><i class="fa fa-pinterest border p-2" aria-hidden="true"></i></a>
+                                    <a href=#" target="_blank"><i class="fa fa-facebook p-2" aria-hidden="true"></i></a>
+                                    <a href="#" target="_blank"><i class="fa fa-twitter p-2" aria-hidden="true"></i></a>
+                                    <a href="#" target="_blank"><i class="fa fa-instagram p-2" aria-hidden="true"></i></a>
+                                    <a href="#" target="_blank"><i class="fa fa-pinterest p-2" aria-hidden="true"></i></a>
                             </p>
                       <h6>WE ARE SUPPORTED BY:</h6>
                       <img src="pexels/fashionlogo.png">
