--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <nav class=" bg-light pb-1 border-bottom">
+    <nav class=" bg-light pb-1 border-bottom container-fluid">
         <div class="row">
         <div class="brand pull-left p-2 col-12 col-md-4">
             <button class ="btn btn-sm btn-link active">EN</button>
