--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@
   </div>
 </div>
      <div class=" container-fluid my-4 subscribe">
-      <form class="pt-5 text-center">
-          <div class="form-group offset-4 col-4 offset-4">
+      <form class="text-center">
+          <div class="form-group col-md-4 mx-auto">
             <label for="FormControlInput1" class="h6 text-white">SUBSCRIBE TO OUR NEWSLETTER</label>
             <input type="email" class="form-control my-4" id="FormControlInput1" placeholder="name@address.com">
             <button class="btn btn-warning">SUBSCRIBE </button>
