--- a/index.html
+++ b/index.html
@@ -480,10 +480,10 @@
 </div>
      <div class=" container-fluid my-4 subscribe">
       <form class="text-center">
-          <div class="form-group col-md-4 mx-auto">
+          <div class="form-group col-6 mx-auto">
             <label for="FormControlInput1" class="h3">SUBSCRIBE TO OUR NEWSLETTER</label>
             <input type="email" class="form-control my-4" id="FormControlInput1" placeholder="name@address.com">
-            <button class="btn btn-warning">SUBSCRIBE </button>
+            <button class="btn btn-lg btn-warning">SUBSCRIBE </button>
           </div>
     </form>
        </div>
